force-app/main/default/objects/Trip__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <description>Destination du voyage.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>