force-app/main/default/objects/Trip__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <description>Date de fin du voyage.</description>
    <type>Date</type>
    <required>true</required>
</CustomField>