force-app/main/default/objects/Trip__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Total Cost</label>
    <description>Coût total du voyage (repris du montant de l'opportunité).</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>